# evm-storage

./: .gitignore  SOURCIFY_VYPER_STORAGE_LAYOUT_HANDOFF.md  pyproject.toml  readme.md
src/evm_storage/: __init__.py  _vyper_worker.py  artifacts.py  cli.py  compiler.py  errors.py  model.py  output.py  paths.py  proxy.py  resolver.py  rpc.py
src/evm_storage/layout/: __init__.py  solidity.py  vyper.py
src/evm_storage/trace/: __init__.py  analyzer.py
test/: conftest.py  test_artifacts.py  test_cli.py  test_crypto_and_model.py  test_integration.py  test_paths.py  test_proxy.py  test_resolver.py  test_rpc.py  test_solidity_layout.py  test_trace.py  test_vyper_layout.py
test/fixtures/: vyper_legacy_composites.vy
test/fixtures/vyper_project/contracts/: Imported.vy
test/fixtures/vyper_project/lib/: constants.vy
