[build-system]
requires = ["uv_build>=0.11.16,<0.12"]
build-backend = "uv_build"

[project]
name = "evm-storage"
version = "0.1.0"
description = "Explain EVM storage changes using compiler layouts and execution traces."
readme = "readme.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "banteg" }]
keywords = ["ethereum", "evm", "solidity", "storage", "vyper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "eth-hash[pycryptodome]>=0.7.1",
    "packaging>=24.2",
    "rich>=13.9.4",
    "uv>=0.8.0",
]

[project.urls]
Repository = "https://github.com/banteg/storage-layout"
Issues = "https://github.com/banteg/storage-layout/issues"

[project.scripts]
evm-storage = "evm_storage.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.13.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-ra"
markers = [
    "compiler: invokes exact external compiler versions",
    "live: requires an Ethereum mainnet archive node",
]

[tool.uv.build-backend]
source-exclude = [".DS_Store"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I", "PIE", "RUF", "SIM", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/evm_storage/_vyper_worker.py" = ["PLC0415"]
